Remove accidentally uploaded files to the repo

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+bin/
 env/
 build/
 develop-eggs/
@@ -15,8 +16,11 @@ dist/
 downloads/
 eggs/
 .eggs/
+include/
 lib/
 lib64/
+#for the symlinks
+lib64
 parts/
 sdist/
 var/
