- Added initial travis config. - Setup a better test with multiple Unicode string. - Add coretest.py to show how to make a coredump and search for strings.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
 envlist = py3
+
 [testenv]
-deps=pytest
-commands=py.test tests
-recreate=True
+deps = pytest
+commands = py.test tests
+recreate = True
+
+[pytest]
+addopts = --duration 5
