--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,9 @@ envlist = py3
 [testenv]
 deps = pytest
 commands = py.test tests
-recreate = True
 
 {testenv:py3]
-basepython=python3}
+basepython=python3
 
 [pytest]
 addopts = --duration 5
