--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: python
-
+python: 3
 env:
-  - TOXENV=py3
+  - TOX_ENV=py3
 
-install: pip install tox
+install: 
+  - pip install tox
 
-script: tox
-
-notifications:
-  email: false
+script: 
+  - tox -e $TOX_ENV
