--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: python
 
+cache: pip
+
 matrix:
     include:
         - python: "3.3"
+        - python: "3.6"
         - python: "nightly"
 
 install: pip install tox
@@ -15,4 +18,3 @@ addons:
             - ubuntu-toolchain-r-test
         packages:
             - gcc
-
