--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,22 @@ cache: pip
 
 matrix:
     include:
-        - python: "3.3"
-        - python: "3.6"
-        - python: "nightly"
+        - os: linux
+          python: "3.3"
+        - os: linux
+          python: "3.6"
+        - os: linux
+          python: "nightly"
+        - os: osx
+          language: generic
 
 install: pip install tox
 
 script: tox
+
+before_install:
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update         ; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
 
 addons:
     apt:
