[CI] For Mac OSX we're going to use pip3 to install tox, because the default is py2

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ matrix:
         - os: osx
           language: generic
 
-install: pip install tox
+install: 
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install tox; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]];  then pip3 install tox; fi
 
 script: tox
 
