--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+pip-selfcheck.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
