--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -2,14 +2,9 @@
 envlist =
     clean,
     check,
-    3.3-cover,
-    3.3-nocov,
-    3.4-cover,
-    3.4-nocov,
-    3.5-cover,
-    3.5-nocov,
-    3.6-cover,
-    3.6-nocov,
+{% for env in tox_environments|sort %}
+    {{ env }},
+{% endfor %}
     report,
     docs
 
@@ -116,69 +111,34 @@ skip_install = true
 usedevelop = false
 deps = coverage
 
-[testenv:3.3-cover]
-basepython = {env:TOXPYTHON:python3.3}
+{% for env, config in tox_environments|dictsort %}
+[testenv:{{ env }}]
+basepython = {env:TOXPYTHON:{{ config.python }}}
+{% if config.cover or config.env_vars %}
 setenv =
     {[testenv]setenv}
+{% endif %}
+{% for var in config.env_vars %}
+    {{ var }}
+{% endfor %}
+{% if config.cover %}
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
     python setup.py clean --all build_ext --force --inplace
     {posargs:py.test --cov --cov-report=term-missing -vv}
+{% endif %}
+{% if config.cover or config.deps %}
 deps =
     {[testenv]deps}
+{% endif %}
+{% if config.cover %}
     pytest-cov
+{% endif %}
+{% for dep in config.deps %}
+    {{ dep }}
+{% endfor %}
 
-[testenv:3.3-nocov]
-basepython = {env:TOXPYTHON:python3.3}
-
-[testenv:3.4-cover]
-basepython = {env:TOXPYTHON:python3.4}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.4-nocov]
-basepython = {env:TOXPYTHON:python3.4}
-
-[testenv:3.5-cover]
-basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.5-nocov]
-basepython = {env:TOXPYTHON:python3.5}
-
-[testenv:3.6-cover]
-basepython = {env:TOXPYTHON:python3.6}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.6-nocov]
-basepython = {env:TOXPYTHON:python3.6}
-
+{% endfor %}
 
 
