--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -14,6 +14,7 @@ matrix:
   include:
 {%- for env, config in tox_environments|dictsort %}{{ '' }}
     - python: '{{ '{0[0]}-5.4'.format(env.split('-')) if env.startswith('pypy') else env.split('-')[0] }}'
+      os: {{ config.os }}
       env:
         - TOXENV={{ env }}{% if config.cover %},report,extension-coveralls,coveralls,codecov{% endif -%}
 {% endfor %}
