--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -13,8 +13,12 @@ env:
 matrix:
   include:
 {%- for env, config in tox_environments|dictsort %}{{ '' }}
-    - python: '{{ '{0[0]}-5.4'.format(env.split('-')) if env.startswith('pypy') else env.split('-')[0] }}'
-      os: {{ config.os }}
+    - os: {{ config.os }}
+      {% if config.os == 'osx' %}
+      python: '{{ '{0[0]}-5.4'.format(env.split('-')) if env.startswith('pypy') else env.split('-')[0] }}'
+      {% else %}
+      language: generic
+      {% endif %}
       env:
         - TOXENV={{ env }}{% if config.cover %},report,extension-coveralls,coveralls,codecov{% endif -%}
 {% endfor %}
@@ -23,8 +27,16 @@ before_install:
   - python --version
   - uname -a
   - lsb_release -a
-install:
-  - pip install tox
+install:|
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+
+      brew update;
+      brew install python3;
+      pip install tox
+
+  else
+      pip install tox
+  fi
   - virtualenv --version
   - easy_install --version
   - pip --version
