--- a/.travis.yml
+++ b/.travis.yml
@@ -81,16 +81,15 @@ before_install:
   - uname -a
   - lsb_release -a
 install: |
-    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-
+  if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
       brew update;
       brew install python3;
   fi
   pip install tox 
-  - virtualenv --version
-  - easy_install --version
-  - pip --version
-  - tox --version
+  virtualenv --version
+  easy_install --version
+  pip --version
+  tox --version
 script:
   - tox -v
 after_failure:
