Rewriting the .travis.yml from new template

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,17 +79,25 @@ matrix:
 before_install:
   - python --version
   - uname -a
-  - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then lsb_release -a;fi
-install: |
-  if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      brew update;
-      brew install python3;
-  fi
-  pip install tox 
-  virtualenv --version
-  easy_install --version
-  pip --version
-  tox --version
+  - |
+      if [[ $TRAVIS_OS_NAME != 'osx' ]];then 
+        lsb_release -a
+      fi
+install: 
+  - |
+      if [[ $TRAVIS_OS_NAME == 'osx' ]];then 
+        brew update
+        brew install pyenv
+        pyenv install $($TOXENV | cut -d"-" -f1)
+        alias python=python3
+        python --version
+        alias pip=pip3
+      fi
+  - pip install tox
+  - virtualenv --version
+  - easy_install --version
+  - pip --version
+  - tox --version
 script:
   - tox -v
 after_failure:
