--- a/.travis.yml
+++ b/.travis.yml
@@ -92,9 +92,16 @@ install:
         fi
         pyenv install $(echo $TOXENV | cut -d"-" -f1)-dev
         pyenv local $(echo $TOXENV | cut -d"-" -f1)-dev
+        export PATH="/Users/travis/.pyenv:$PATH"
+        eval "$(pyenv init -)"
+        python --version
+        python3 --version
         alias python=python3
         python --version
+        pip --version
+        pip3 --version
         alias pip=pip3
+        pip --version
       fi
   - pip install tox
   - virtualenv --version
