--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -14,10 +14,12 @@ matrix:
   include:
 {%- for env, config in tox_environments|dictsort %}{{ '' }}
     - os: {{ config.os }}
-      {% if config.os == 'osx' %}
+      python: "{{ '{0[0]}-5.4'.format(env.split('-')) if env.startswith('pypy') else env.split('-')[0] }}"
+      {% if config.os == "osx" %}
       language: generic
-      {% else %}
-      python: '{{ '{0[0]}-5.4'.format(env.split('-')) if env.startswith('pypy') else env.split('-')[0] }}'
+      {% if config.python == "3.6" %}
+      osx_image: xcode8.3
+      {% endif %}
       {% endif %}
       env:
         - TOXENV={{ env }}{% if config.cover %},report,extension-coveralls,coveralls,codecov{% endif -%}
@@ -26,10 +28,10 @@ matrix:
 before_install:
   - python --version
   - uname -a
-  - if [[ $TRAVIS_OS_NAME != 'osx' ]];then lsb_release -a ;fi
+  - if [[ $TRAVIS_OS_NAME != "osx" ]];then lsb_release -a ;fi
 install: 
   - |
-      if [[ $TRAVIS_OS_NAME == 'osx' ]];then 
+      if [[ $TRAVIS_OS_NAME == "osx" ]];then 
         brew update
         if [[ "$(brew outdated --quiet | grep -qx pyenv)" != "" ]];then
             brew upgrade pyenv
@@ -47,13 +49,9 @@ install:
         python --version
         python3 --version
         alias python=python3
-      fi
   - |
       if [[ $TRAVIS_OS_NAME == 'osx' ]];then 
         python --version
-        pip --version
-        pip3 --version
-        alias pip=pip3
         pip --version
       fi
 
