--- a/.travis.yml
+++ b/.travis.yml
@@ -98,11 +98,9 @@ install:
       fi
   - |
       if [[ $TRAVIS_OS_NAME == "osx" ]];then
-        pyenv install --list
-        pyenv install --list | grep $(echo $TOXENV | cut -d"-" -f1)
-        pyenv install --list | grep $(echo $TOXENV | cut -d"-" -f1) | tail -1
-        pyenv --debug install $(echo $TOXENV | cut -d"-" -f1)-dev
-        pyenv --debug local $(echo $TOXENV | cut -d"-" -f1)-dev
+        set PYENV_BRANCH_LASTEST=pyenv install --list | grep $(echo $TOXENV | cut -d"-" -f1) | grep -v "-" | tail -1
+        pyenv --debug install $PYENV_BRANCH_LASTEST
+        pyenv local $PYENV_BRANCH_LASTEST
         export PATH="/Users/travis/.pyenv:$PATH"
         eval "$(pyenv init -)"
       fi
