--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -32,8 +32,8 @@ install:
   - |
       if [[ $TRAVIS_OS_NAME == "osx" ]];then 
         git clone https://github.com/pyenv/pyenv.git ~/.pyenv
-        export PYENV_ROOT="$HOME/.pyenv
-        export PATH="$PYENV_ROOT/bin:$PATH
+        export PYENV_ROOT="$HOME/.pyenv"
+        export PATH="$PYENV_ROOT/bin:$PATH"
         eval $(pyenv init -)
       fi
   - |
