--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -34,7 +34,7 @@ install:
         git clone https://github.com/pyenv/pyenv.git ~/.pyenv
         export PYENV_ROOT="$HOME/.pyenv"
         export PATH="$PYENV_ROOT/bin:$PATH"
-        eval $(pyenv init -)
+        eval "$(pyenv init -)"
       fi
   - |
       if [[ $TRAVIS_OS_NAME == "osx" ]];then
