--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -35,15 +35,15 @@ install:
         export PYENV_ROOT="$HOME/.pyenv"
         export PATH="$PYENV_ROOT/bin:$PATH"
         eval "$(pyenv init -)"
-        PYENV_BRANCH=$(echo $TOXENV | cut -d"-" -f1)
+        export PYENV_BRANCH=$(echo $TOXENV | cut -d"-" -f1)
         echo "The Base branch is: $PYENV_BRANCH"
       fi
   - |
       if [[ $TRAVIS_OS_NAME == "osx" ]];then
-        pyenv install --list | grep "$PYENV_BRANCH" | grep -v "-"
-        set PYENV_BRANCH_LASTEST=$(pyenv install --list | grep "$PYENV_BRANCH" | grep -v "-" | tail -1)
+        pyenv install --list | grep "$PYENV_BRANCH" | grep -v "-" | tail -1
+        export PYENV_BRANCH_LASTEST=$(pyenv install --list | grep "$PYENV_BRANCH" | grep -v "-" | tail -1)
         echo "Going for: $PYENV_BRANCH_LASTEST"
-        pyenv --debug install $PYENV_BRANCH_LASTEST
+        pyenv install $PYENV_BRANCH_LASTEST
         pyenv local $PYENV_BRANCH_LASTEST
         eval "$(pyenv init -)"
       fi
