--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ env:
     - SEGFAULT_SIGNALS=all
   matrix:
     - TOXENV=check
+    - TOXENV=docs
 matrix:
   allow_failures:
-    - TOXENV=docs
+    - env: TOXENV=docs
   include:
     - os: linux
       python: "3.3"
