--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -18,5 +18,8 @@ include README.rst
 
 include tox.ini .travis.yml appveyor.yml
 
-global-exclude *.py[cod] __pycache__ *.so *.dylib .ropeproject *.bkp
+prune __pycache__ 
+prune .ropeproject
+prune */.ropeproject
 
+global-exclude *.py[cod] *.bkp *.so *.dylib
