--- a/tox.ini
+++ b/tox.ini
@@ -4,20 +4,36 @@ envlist =
     check,
     3.3-cover-linux,
     3.3-cover-osx,
+    3.3-cover-win2k12r2,
+    3.3-cover-win2k16,
     3.3-nocov-linux,
     3.3-nocov-osx,
+    3.3-nocov-win2k12r2,
+    3.3-nocov-win2k16,
     3.4-cover-linux,
     3.4-cover-osx,
+    3.4-cover-win2k12r2,
+    3.4-cover-win2k16,
     3.4-nocov-linux,
     3.4-nocov-osx,
+    3.4-nocov-win2k12r2,
+    3.4-nocov-win2k16,
     3.5-cover-linux,
     3.5-cover-osx,
+    3.5-cover-win2k12r2,
+    3.5-cover-win2k16,
     3.5-nocov-linux,
     3.5-nocov-osx,
+    3.5-nocov-win2k12r2,
+    3.5-nocov-win2k16,
     3.6-cover-linux,
     3.6-cover-osx,
+    3.6-cover-win2k12r2,
+    3.6-cover-win2k16,
     3.6-nocov-linux,
     3.6-nocov-osx,
+    3.6-nocov-win2k12r2,
+    3.6-nocov-win2k16,
     report,
     docs
 
@@ -150,10 +166,42 @@ deps =
     {[testenv]deps}
     pytest-cov
 
+[testenv:3.3-cover-win2k12r2]
+basepython = {env:TOXPYTHON:python3.3}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.3-cover-win2k16]
+basepython = {env:TOXPYTHON:python3.3}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
 [testenv:3.3-nocov-linux]
 basepython = {env:TOXPYTHON:python3.3}
 
 [testenv:3.3-nocov-osx]
+basepython = {env:TOXPYTHON:python3.3}
+
+[testenv:3.3-nocov-win2k12r2]
+basepython = {env:TOXPYTHON:python3.3}
+
+[testenv:3.3-nocov-win2k16]
 basepython = {env:TOXPYTHON:python3.3}
 
 [testenv:3.4-cover-linux]
@@ -182,10 +230,42 @@ deps =
     {[testenv]deps}
     pytest-cov
 
+[testenv:3.4-cover-win2k12r2]
+basepython = {env:TOXPYTHON:python3.4}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.4-cover-win2k16]
+basepython = {env:TOXPYTHON:python3.4}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
 [testenv:3.4-nocov-linux]
 basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:3.4-nocov-osx]
+basepython = {env:TOXPYTHON:python3.4}
+
+[testenv:3.4-nocov-win2k12r2]
+basepython = {env:TOXPYTHON:python3.4}
+
+[testenv:3.4-nocov-win2k16]
 basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:3.5-cover-linux]
@@ -214,10 +294,42 @@ deps =
     {[testenv]deps}
     pytest-cov
 
+[testenv:3.5-cover-win2k12r2]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.5-cover-win2k16]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
 [testenv:3.5-nocov-linux]
 basepython = {env:TOXPYTHON:python3.5}
 
 [testenv:3.5-nocov-osx]
+basepython = {env:TOXPYTHON:python3.5}
+
+[testenv:3.5-nocov-win2k12r2]
+basepython = {env:TOXPYTHON:python3.5}
+
+[testenv:3.5-nocov-win2k16]
 basepython = {env:TOXPYTHON:python3.5}
 
 [testenv:3.6-cover-linux]
@@ -246,10 +358,42 @@ deps =
     {[testenv]deps}
     pytest-cov
 
+[testenv:3.6-cover-win2k12r2]
+basepython = {env:TOXPYTHON:python3.6}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.6-cover-win2k16]
+basepython = {env:TOXPYTHON:python3.6}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
 [testenv:3.6-nocov-linux]
 basepython = {env:TOXPYTHON:python3.6}
 
 [testenv:3.6-nocov-osx]
+basepython = {env:TOXPYTHON:python3.6}
+
+[testenv:3.6-nocov-win2k12r2]
+basepython = {env:TOXPYTHON:python3.6}
+
+[testenv:3.6-nocov-win2k16]
 basepython = {env:TOXPYTHON:python3.6}
 
 
