--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,11 @@ version: '{branch}-{build}'
 build: off
 cache:
   - '%LOCALAPPDATA%\pip\Cache'
+image:
+    # Uncomment to test on W2k12R2, VS15
+    #- Visual Studio 2015
+    # Test on W2k16, VS17
+    - Visual Studio 2017
 environment:
   global:
     WITH_COMPILER: 'cmd /E:ON /V:ON /C .\ci\appveyor-with-compiler.cmd'
