Testing few tweaks on the appveyor config

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,5 +81,4 @@ os =
     linux
     osx
 # Images, 2015=w2k12r2, 2017=w2k16
-    win2k12r2: Visual-Studio-2015
-    win2k16: Visual-Studio-2017
+    win
