--- a/tox.ini
+++ b/tox.ini
@@ -4,36 +4,28 @@ envlist =
     check,
     3.3-cover-linux,
     3.3-cover-osx,
-    3.3-cover-win2k12r2,
-    3.3-cover-win2k16,
+    3.3-cover-win,
     3.3-nocov-linux,
     3.3-nocov-osx,
-    3.3-nocov-win2k12r2,
-    3.3-nocov-win2k16,
+    3.3-nocov-win,
     3.4-cover-linux,
     3.4-cover-osx,
-    3.4-cover-win2k12r2,
-    3.4-cover-win2k16,
+    3.4-cover-win,
     3.4-nocov-linux,
     3.4-nocov-osx,
-    3.4-nocov-win2k12r2,
-    3.4-nocov-win2k16,
+    3.4-nocov-win,
     3.5-cover-linux,
     3.5-cover-osx,
-    3.5-cover-win2k12r2,
-    3.5-cover-win2k16,
+    3.5-cover-win,
     3.5-nocov-linux,
     3.5-nocov-osx,
-    3.5-nocov-win2k12r2,
-    3.5-nocov-win2k16,
+    3.5-nocov-win,
     3.6-cover-linux,
     3.6-cover-osx,
-    3.6-cover-win2k12r2,
-    3.6-cover-win2k16,
+    3.6-cover-win,
     3.6-nocov-linux,
     3.6-nocov-osx,
-    3.6-nocov-win2k12r2,
-    3.6-nocov-win2k16,
+    3.6-nocov-win,
     report,
     docs
 
@@ -166,20 +158,7 @@ deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.3-cover-win2k12r2]
-basepython = {env:TOXPYTHON:python3.3}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.3-cover-win2k16]
+[testenv:3.3-cover-win]
 basepython = {env:TOXPYTHON:python3.3}
 setenv =
     {[testenv]setenv}
@@ -198,10 +177,7 @@ basepython = {env:TOXPYTHON:python3.3}
 [testenv:3.3-nocov-osx]
 basepython = {env:TOXPYTHON:python3.3}
 
-[testenv:3.3-nocov-win2k12r2]
-basepython = {env:TOXPYTHON:python3.3}
-
-[testenv:3.3-nocov-win2k16]
+[testenv:3.3-nocov-win]
 basepython = {env:TOXPYTHON:python3.3}
 
 [testenv:3.4-cover-linux]
@@ -230,20 +206,7 @@ deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.4-cover-win2k12r2]
-basepython = {env:TOXPYTHON:python3.4}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.4-cover-win2k16]
+[testenv:3.4-cover-win]
 basepython = {env:TOXPYTHON:python3.4}
 setenv =
     {[testenv]setenv}
@@ -262,10 +225,7 @@ basepython = {env:TOXPYTHON:python3.4}
 [testenv:3.4-nocov-osx]
 basepython = {env:TOXPYTHON:python3.4}
 
-[testenv:3.4-nocov-win2k12r2]
-basepython = {env:TOXPYTHON:python3.4}
-
-[testenv:3.4-nocov-win2k16]
+[testenv:3.4-nocov-win]
 basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:3.5-cover-linux]
@@ -294,20 +254,7 @@ deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.5-cover-win2k12r2]
-basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.5-cover-win2k16]
+[testenv:3.5-cover-win]
 basepython = {env:TOXPYTHON:python3.5}
 setenv =
     {[testenv]setenv}
@@ -326,10 +273,7 @@ basepython = {env:TOXPYTHON:python3.5}
 [testenv:3.5-nocov-osx]
 basepython = {env:TOXPYTHON:python3.5}
 
-[testenv:3.5-nocov-win2k12r2]
-basepython = {env:TOXPYTHON:python3.5}
-
-[testenv:3.5-nocov-win2k16]
+[testenv:3.5-nocov-win]
 basepython = {env:TOXPYTHON:python3.5}
 
 [testenv:3.6-cover-linux]
@@ -358,20 +302,7 @@ deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.6-cover-win2k12r2]
-basepython = {env:TOXPYTHON:python3.6}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.6-cover-win2k16]
+[testenv:3.6-cover-win]
 basepython = {env:TOXPYTHON:python3.6}
 setenv =
     {[testenv]setenv}
@@ -390,10 +321,7 @@ basepython = {env:TOXPYTHON:python3.6}
 [testenv:3.6-nocov-osx]
 basepython = {env:TOXPYTHON:python3.6}
 
-[testenv:3.6-nocov-win2k12r2]
-basepython = {env:TOXPYTHON:python3.6}
-
-[testenv:3.6-nocov-win2k16]
+[testenv:3.6-nocov-win]
 basepython = {env:TOXPYTHON:python3.6}
 
 
