--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,11 +2,6 @@ version: '{branch}-{build}'
 build: off
 cache:
   - '%LOCALAPPDATA%\pip\Cache'
-image:
-    # Uncomment to test on W2k12R2, VS15
-    - Visual Studio 2015
-    # Test on W2k16, VS17
-    - Visual Studio 2017
 environment:
   global:
     WITH_COMPILER: 'cmd /E:ON /V:ON /C .\ci\appveyor-with-compiler.cmd'
@@ -19,27 +14,15 @@ environment:
 
 
 
-    - TOXENV: '3.3-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.3-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python33\python.exe
       PYTHON_HOME: C:\Python33
       PYTHON_VERSION: '3.3'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.3-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.3-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python33-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
-      PYTHON_HOME: C:\Python33-x64
-      PYTHON_VERSION: '3.3'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.3-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python33\python.exe
-      PYTHON_HOME: C:\Python33
-      PYTHON_VERSION: '3.3'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.3-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python33-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
       PYTHON_HOME: C:\Python33-x64
       PYTHON_VERSION: '3.3'
       PYTHON_ARCH: '64'
@@ -47,27 +30,15 @@ environment:
 
 
 
-    - TOXENV: '3.3-nocov-win2k12r2'
+    - TOXENV: '3.3-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python33\python.exe
       PYTHON_HOME: C:\Python33
       PYTHON_VERSION: '3.3'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.3-nocov-win2k12r2'
+    - TOXENV: '3.3-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python33-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
-      PYTHON_HOME: C:\Python33-x64
-      PYTHON_VERSION: '3.3'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.3-nocov-win2k16'
-      TOXPYTHON: C:\Python33\python.exe
-      PYTHON_HOME: C:\Python33
-      PYTHON_VERSION: '3.3'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.3-nocov-win2k16'
-      TOXPYTHON: C:\Python33-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
       PYTHON_HOME: C:\Python33-x64
       PYTHON_VERSION: '3.3'
       PYTHON_ARCH: '64'
@@ -75,27 +46,15 @@ environment:
 
 
 
-    - TOXENV: '3.4-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.4-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python34\python.exe
       PYTHON_HOME: C:\Python34
       PYTHON_VERSION: '3.4'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.4-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.4-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python34-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
-      PYTHON_HOME: C:\Python34-x64
-      PYTHON_VERSION: '3.4'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.4-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python34\python.exe
-      PYTHON_HOME: C:\Python34
-      PYTHON_VERSION: '3.4'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.4-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python34-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
       PYTHON_HOME: C:\Python34-x64
       PYTHON_VERSION: '3.4'
       PYTHON_ARCH: '64'
@@ -103,27 +62,15 @@ environment:
 
 
 
-    - TOXENV: '3.4-nocov-win2k12r2'
+    - TOXENV: '3.4-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python34\python.exe
       PYTHON_HOME: C:\Python34
       PYTHON_VERSION: '3.4'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.4-nocov-win2k12r2'
+    - TOXENV: '3.4-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOXPYTHON: C:\Python34-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
-      PYTHON_HOME: C:\Python34-x64
-      PYTHON_VERSION: '3.4'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.4-nocov-win2k16'
-      TOXPYTHON: C:\Python34\python.exe
-      PYTHON_HOME: C:\Python34
-      PYTHON_VERSION: '3.4'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.4-nocov-win2k16'
-      TOXPYTHON: C:\Python34-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
       PYTHON_HOME: C:\Python34-x64
       PYTHON_VERSION: '3.4'
       PYTHON_ARCH: '64'
@@ -131,24 +78,14 @@ environment:
 
 
 
-    - TOXENV: '3.5-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.5-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python35\python.exe
       PYTHON_HOME: C:\Python35
       PYTHON_VERSION: '3.5'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.5-cover-win2k12r2,report,codecov'
-      TOXPYTHON: C:\Python35-x64\python.exe
-      PYTHON_HOME: C:\Python35-x64
-      PYTHON_VERSION: '3.5'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.5-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python35\python.exe
-      PYTHON_HOME: C:\Python35
-      PYTHON_VERSION: '3.5'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.5-cover-win2k16,report,codecov'
+    - TOXENV: '3.5-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python35-x64\python.exe
       PYTHON_HOME: C:\Python35-x64
       PYTHON_VERSION: '3.5'
@@ -157,24 +94,14 @@ environment:
 
 
 
-    - TOXENV: '3.5-nocov-win2k12r2'
+    - TOXENV: '3.5-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python35\python.exe
       PYTHON_HOME: C:\Python35
       PYTHON_VERSION: '3.5'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.5-nocov-win2k12r2'
-      TOXPYTHON: C:\Python35-x64\python.exe
-      PYTHON_HOME: C:\Python35-x64
-      PYTHON_VERSION: '3.5'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.5-nocov-win2k16'
-      TOXPYTHON: C:\Python35\python.exe
-      PYTHON_HOME: C:\Python35
-      PYTHON_VERSION: '3.5'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.5-nocov-win2k16'
+    - TOXENV: '3.5-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python35-x64\python.exe
       PYTHON_HOME: C:\Python35-x64
       PYTHON_VERSION: '3.5'
@@ -183,27 +110,15 @@ environment:
 
 
 
-    - TOXENV: '3.6-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.6-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python36\python.exe
       PYTHON_HOME: C:\Python36
       PYTHON_VERSION: '3.6'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.6-cover-win2k12r2,report,codecov'
+    - TOXENV: '3.6-cover-win,report,codecov'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python36-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
-      PYTHON_HOME: C:\Python36-x64
-      PYTHON_VERSION: '3.6'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.6-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python36\python.exe
-      PYTHON_HOME: C:\Python36
-      PYTHON_VERSION: '3.6'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.6-cover-win2k16,report,codecov'
-      TOXPYTHON: C:\Python36-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
       PYTHON_HOME: C:\Python36-x64
       PYTHON_VERSION: '3.6'
       PYTHON_ARCH: '64'
@@ -211,27 +126,15 @@ environment:
 
 
 
-    - TOXENV: '3.6-nocov-win2k12r2'
+    - TOXENV: '3.6-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python36\python.exe
       PYTHON_HOME: C:\Python36
       PYTHON_VERSION: '3.6'
       PYTHON_ARCH: '32'
-    - TOXENV: '3.6-nocov-win2k12r2'
+    - TOXENV: '3.6-nocov-win'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOXPYTHON: C:\Python36-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
-      PYTHON_HOME: C:\Python36-x64
-      PYTHON_VERSION: '3.6'
-      PYTHON_ARCH: '64'
-
-
-    - TOXENV: '3.6-nocov-win2k16'
-      TOXPYTHON: C:\Python36\python.exe
-      PYTHON_HOME: C:\Python36
-      PYTHON_VERSION: '3.6'
-      PYTHON_ARCH: '32'
-    - TOXENV: '3.6-nocov-win2k16'
-      TOXPYTHON: C:\Python36-x64\python.exe
-      WINDOWS_SDK_VERSION: v7.1
       PYTHON_HOME: C:\Python36-x64
       PYTHON_VERSION: '3.6'
       PYTHON_ARCH: '64'
