--- a/ci/templates/appveyor.yml
+++ b/ci/templates/appveyor.yml
@@ -2,11 +2,6 @@ version: '{branch}-{build}'
 build: off
 cache:
   - '%LOCALAPPDATA%\pip\Cache'
-image:
-    # Uncomment to test on W2k12R2, VS15
-    - Visual Studio 2015
-    # Test on W2k16, VS17
-    - Visual Studio 2017
 environment:
   global:
     WITH_COMPILER: 'cmd /E:ON /V:ON /C .\ci\appveyor-with-compiler.cmd'
@@ -17,19 +12,16 @@ environment:
       PYTHON_VERSION: '3.4'
       PYTHON_ARCH: '32'
 {% for env, config in tox_environments|dictsort %}{{ '' }}
-    {% if config.python.startswith('python') and config.os not in ['osx', 'linux'] %}
+    {% if config.python.startswith('python') and config.os == 'win'  %}
     - TOXENV: '{{ env }}{% if config.cover %},report,codecov{% endif %}'
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 201{%- if config.python[-3:]|float < 3.5 -%} 5 {%- else -%} 7 {%- endif -%}{{ '' }}
       TOXPYTHON: C:\{{ config.python.replace('.', '').capitalize() }}\python.exe
       PYTHON_HOME: C:\{{ config.python.replace('.', '').capitalize() }}
       PYTHON_VERSION: '{{ config.python[-3:] }}'
       PYTHON_ARCH: '32'
-    - TOXENV: '{{ env  }}{% if config.cover %},report,codecov{% endif %}'
+    - TOXENV: '{{ env  }}{% if config.cover %},report,codecov{% endif %}'{{ '' }}
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 201{%- if config.python[-3:]|float < 3.5 -%} 5 {%- else -%} 7 {%- endif -%}{{ '' }}
       TOXPYTHON: C:\{{ config.python.replace('.', '').capitalize() }}-x64\python.exe
-      {%- if config.python != 'python3.5' %}
-
-      WINDOWS_SDK_VERSION: v7.{{ '1' if config.python[-3] == '3' else '0' }}
-      {%- endif %}
-
       PYTHON_HOME: C:\{{ config.python.replace('.', '').capitalize() }}-x64
       PYTHON_VERSION: '{{ config.python[-3:] }}'
       PYTHON_ARCH: '64'
