--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,7 +15,9 @@ include CHANGELOG.rst
 include CONTRIBUTING.rst
 include LICENSE
 include README.rst
+include TODO.rst
 include requirements.txt
+include requirements-dev,txt
 
 include tox.ini .travis.yml appveyor.yml
 
