Fix MANIFEST.in and import order in new test.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -25,4 +25,4 @@ prune __pycache__
 prune .ropeproject
 prune */.ropeproject
 
-global-exclude *.py[cod] *.bkp *.so *.dylib *valgrind*
+global-exclude *.py[cod] *.bkp *.so *.dylib *valgrind* memleak*
