Fixed some minor things: version definition, setup.py CFLAGS handling, README, License things, etc

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ lib
 lib64
 venv*/
 pyvenv*/
+pyvenv.cfg
 
 # Installer logs
 pip-log.txt
@@ -32,6 +33,7 @@ pip-log.txt
 nosetests.xml
 coverage.xml
 htmlcov
+.pytest_cache/
 
 # Translations
 *.mo
