--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -11,7 +11,7 @@ envlist =
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,extension-coveralls,coveralls,codecov}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -70,14 +70,6 @@ commands =
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
 
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-usedevelop = false
-commands =
-    coveralls --merge=extension-coveralls.json []
-
 [testenv:codecov]
 deps =
     codecov
@@ -87,21 +79,12 @@ commands =
     coverage xml --ignore-errors
     codecov []
 
-
-[testenv:extension-coveralls]
-deps =
-    cpp-coveralls
-skip_install = true
-usedevelop = false
-commands =
-    coveralls --build-root=. --include=src --dump=extension-coveralls.json []
-
 [testenv:report]
 deps = coverage
 skip_install = true
 usedevelop = false
 commands =
-    coverage combine --append
+    coverage combine --append --ignore-errors
     coverage report
     coverage html
 
