--- a/tox.ini
+++ b/tox.ini
@@ -2,18 +2,6 @@
 envlist =
     clean,
     check,
-    3.3-cover-linux,
-    3.3-cover-osx,
-    3.3-cover-win,
-    3.3-nocov-linux,
-    3.3-nocov-osx,
-    3.3-nocov-win,
-    3.4-cover-linux,
-    3.4-cover-osx,
-    3.4-cover-win,
-    3.4-nocov-linux,
-    3.4-nocov-osx,
-    3.4-nocov-win,
     3.5-cover-linux,
     3.5-cover-osx,
     3.5-cover-win,
@@ -26,13 +14,25 @@ envlist =
     3.6-nocov-linux,
     3.6-nocov-osx,
     3.6-nocov-win,
+    3.7-cover-linux,
+    3.7-cover-osx,
+    3.7-cover-win,
+    3.7-nocov-linux,
+    3.7-nocov-osx,
+    3.7-nocov-win,
+    3.8-cover-linux,
+    3.8-cover-osx,
+    3.8-cover-win,
+    3.8-nocov-linux,
+    3.8-nocov-osx,
+    3.8-nocov-win,
     report,
     docs
 
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,extension-coveralls,coveralls,codecov}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -91,14 +91,6 @@ commands =
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
 
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-usedevelop = false
-commands =
-    coveralls --merge=extension-coveralls.json []
-
 [testenv:codecov]
 deps =
     codecov
@@ -108,21 +100,12 @@ commands =
     coverage xml --ignore-errors
     codecov []
 
-
-[testenv:extension-coveralls]
-deps =
-    cpp-coveralls
-skip_install = true
-usedevelop = false
-commands =
-    coveralls --build-root=. --include=src --dump=extension-coveralls.json []
-
 [testenv:report]
 deps = coverage
 skip_install = true
 usedevelop = false
 commands =
-    coverage combine --append
+    coverage combine --append --ignore-errors
     coverage report
     coverage html
 
@@ -131,102 +114,6 @@ commands = coverage erase
 skip_install = true
 usedevelop = false
 deps = coverage
-
-[testenv:3.3-cover-linux]
-basepython = {env:TOXPYTHON:python3.3}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.3-cover-osx]
-basepython = {env:TOXPYTHON:python3.3}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.3-cover-win]
-basepython = {env:TOXPYTHON:python3.3}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.3-nocov-linux]
-basepython = {env:TOXPYTHON:python3.3}
-
-[testenv:3.3-nocov-osx]
-basepython = {env:TOXPYTHON:python3.3}
-
-[testenv:3.3-nocov-win]
-basepython = {env:TOXPYTHON:python3.3}
-
-[testenv:3.4-cover-linux]
-basepython = {env:TOXPYTHON:python3.4}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.4-cover-osx]
-basepython = {env:TOXPYTHON:python3.4}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.4-cover-win]
-basepython = {env:TOXPYTHON:python3.4}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.4-nocov-linux]
-basepython = {env:TOXPYTHON:python3.4}
-
-[testenv:3.4-nocov-osx]
-basepython = {env:TOXPYTHON:python3.4}
-
-[testenv:3.4-nocov-win]
-basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:3.5-cover-linux]
 basepython = {env:TOXPYTHON:python3.5}
@@ -323,6 +210,102 @@ basepython = {env:TOXPYTHON:python3.6}
 
 [testenv:3.6-nocov-win]
 basepython = {env:TOXPYTHON:python3.6}
+
+[testenv:3.7-cover-linux]
+basepython = {env:TOXPYTHON:python3.7}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.7-cover-osx]
+basepython = {env:TOXPYTHON:python3.7}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.7-cover-win]
+basepython = {env:TOXPYTHON:python3.7}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.7-nocov-linux]
+basepython = {env:TOXPYTHON:python3.7}
+
+[testenv:3.7-nocov-osx]
+basepython = {env:TOXPYTHON:python3.7}
+
+[testenv:3.7-nocov-win]
+basepython = {env:TOXPYTHON:python3.7}
+
+[testenv:3.8-cover-linux]
+basepython = {env:TOXPYTHON:python3.8}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.8-cover-osx]
+basepython = {env:TOXPYTHON:python3.8}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.8-cover-win]
+basepython = {env:TOXPYTHON:python3.8}
+setenv =
+    {[testenv]setenv}
+    SETUPPY_CFLAGS=-coverage
+usedevelop = true
+commands =
+    python setup.py clean --all build_ext --force --inplace
+    {posargs:py.test --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.8-nocov-linux]
+basepython = {env:TOXPYTHON:python3.8}
+
+[testenv:3.8-nocov-osx]
+basepython = {env:TOXPYTHON:python3.8}
+
+[testenv:3.8-nocov-win]
+basepython = {env:TOXPYTHON:python3.8}
 
 
 
